# django42

./: .gitignore  README.md
django/: pyproject.toml
django/sitewomen/config/: .env.template
django/sitewomen/sitewomen/: oldsettings.py  urls.py
django/sitewomen/sitewomen/settings/: __init__.py
django/sitewomen/sitewomen/settings/components/: caches.py  common.py  drf.py  logging.py
django/sitewomen/sitewomen/settings/environments/: development.py  production.py
django/sitewomen/static/css/admin/: admin.css
django/sitewomen/templates/: base.bac  base.html
django/sitewomen/templates/admin/: base_site.html
django/sitewomen/users/: admin.py  context_processors.py  forms.py  models.py  pipeline.py  tests.py  urls.py  views.py
django/sitewomen/users/migrations/: 0001_initial.py  0002_alter_profile_date_birth_alter_profile_user.py
django/sitewomen/users/templates/users/: login.html  profile.html  register.html
django/sitewomen/women/: admin.py  converters.py  forms.py  models.py  sitemaps.py  tests.py  urls.py  utils.py  views.py
django/sitewomen/women/migrations/: 0001_initial.py  0002_alter_women_options_women_slug.py  0003_alter_women_slug.py  0004_alter_women_is_published.py  0005_alter_women_is_published.py  0006_category_women_cat.py  0007_tagposts_alter_women_cat_women_tags.py  0008_husband_women_husband.py  0009_alter_women_options_tagposts_m_count_and_more.py  0010_remove_tagposts_m_count_husband_m_count.py  0011_uploadfiles_alter_category_options_and_more.py  0012_women_author.py
django/sitewomen/women/templates/women/: about.html  (+7 more)
django/sitewomen/women/templatetags/: women_tags.py
(+1 files in other folders)
