[tool.poetry]
name = "mydjango"
version = "0.1.0"
description = ""
authors = ["VasilIvanovitch <vnechviadovich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
django-stubs-ext = "^4.2.2"
django_extensions = "^3.2.3"
python-decouple = "^3.8"
structlog = "^23.1.0"
psycopg2-binary = "^2.9.7"
ipython = "^8.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
