[tool.poetry]
name = "mydjango"
version = "0.1.0"
description = ""
authors = ["VasilIvanovitch <vnechviadovich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
django-stubs-ext = "^4.2.2"
django_extensions = "^3.2.3"
python-decouple = "^3.8"
structlog = "^23.1.0"
psycopg2-binary = "^2.9.7"
ipython = "^8.15.0"
django-debug-toolbar = "^4.2.0"
pillow = "^10.1.0"
social-auth-app-django = "^5.4.0"
werkzeug = "^3.0.1"
pyopenssl = "^23.3.0"
django-simple-captcha = "^0.5.20"
redis = "^5.0.1"
hiredis = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
